# faith

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  client-api.cc  echo_server.cc  echo_server2.cc  epoll-client.cc  epoll-server.cc  nonblocking-connection.cc  server-api.cc  test_rio.cc
logs/: 简单IM服务器设计-171123.md  简单IM服务器设计方案.md
src/Serialization/: Serialization.h  ZZP.h
src/epoll/: CMakeLists.txt  Channel.cc  Channel.h  Channel的生命周期管理.md  EpollSelector.cc  EpollSelector.h  Processor.cc  Processor.h  Reactor.cc  Reactor.h  Selector.cc  Selector.h  enums.h  epoll.cc  epoll.h
src/net/: CMakeLists.txt  net.cpp  net.h  simple_server_api.cc  simple_server_api.h  socket.cc  socket.h  tcp_server.cc  tcp_server.h
src/rpc/: CMakeLists.txt  RpcProtocol.cc  RpcProtocol.h
src/utli/: BinaryUtliity.h  Buffer.h  io.h  io_utility.h  rio.cc  rio.h  riowrapper.cc  riowrapper.h
test/: CMakeLists.txt  echo_server.cc  echo_server2.cc  rpccli.cc  rpcsrv.cc  telnet_im_protocol.h  test.cc  test_im_decoder.cc  test_zzp.cc
